# healthcarecli

./: CLAUDE.md  LICENSE  README.md  RELEASING.md  SKILL.md  pyproject.toml
.claude/commands/: anonymize-dicom.md  bulk-operations.md  export-dataset.md  setup-fhir.md  setup-hl7.md  setup-pacs.md
.github/workflows/: release.yml
healthcarecli/: cli.py  init_cmd.py
healthcarecli/config/: manager.py
healthcarecli/dataset/: cli.py  export.py
healthcarecli/dicom/: anonymize.py  bulk.py  cli.py  connections.py  echo.py  move.py  query.py  store.py  view.py  web.py  web_cli.py
healthcarecli/fhir/: cli.py  client.py  token.py
npm/: package.json
sample_data/: DEBUG_GUIDE.md  generate_dicom.py
sample_data/batch/: batch_query.csv  batch_query_tags.csv
sample_data/dicom/: cr_chest_001.dcm  ct_slice_001.dcm  ct_slice_002.dcm  ct_slice_003.dcm  mr_brain_001.dcm  sr_report_001.dcm  us_abdomen_001.dcm
sample_data/fhir/: diagnostic_report.json  observations.json  patient_bundle.json
sample_data/hl7/: adt_a01_admit.hl7  adt_a03_discharge.hl7  adt_a08_update.hl7  orm_o01_order.hl7  oru_r01_result.hl7
tests/dataset/: test_export.py
tests/dicom/: test_anonymize.py  test_bulk.py  test_connections.py  test_echo.py  test_move.py  test_query.py  test_store.py  test_web.py
tests/fhir/: test_client.py  test_token.py
