[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthcarecli"
version = "0.1.0"
description = "Cross-platform CLI for healthcare interoperability — DICOM, FHIR, HL7"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo Farina" }]
keywords = ["healthcare", "dicom", "fhir", "hl7", "pacs", "cli", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pynetdicom>=2.1",
    "pydicom>=2.4",
    "platformdirs>=4.0",
    "dicomweb-client>=0.60",
    "requests>=2.31",
    "fhir.resources>=7.1",
    "PyJWT>=2.8",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/eduardofarina/healthcarecli"
Repository = "https://github.com/eduardofarina/healthcarecli"
Issues = "https://github.com/eduardofarina/healthcarecli/issues"

[project.scripts]
healthcarecli = "healthcarecli.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
